layout issues, and adding color calculations to card rendering

--- a/src/layout/layout.module.scss
+++ b/src/layout/layout.module.scss
@@ -1,3 +1,10 @@
+.stack {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+}
+
 .container {
   margin: 0;
   padding: 0;
